<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.account.Account">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/feed_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/left_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_account"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="61dp"
            android:background="@drawable/bottom_line"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/account_info"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:layout_editor_absoluteX="113dp" />

        <TextView
            android:id="@+id/adres"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bottom_line"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/adres"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/info_account"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bottom_line"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/adres"
            tools:layout_editor_absoluteX="-16dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="23dp"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/info_account"
            app:layout_constraintEnd_toEndOf="@+id/info_account"
            app:layout_constraintTop_toTopOf="@+id/info_account" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="23dp"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/adres"
            app:layout_constraintEnd_toEndOf="@+id/adres"
            app:layout_constraintTop_toTopOf="@+id/adres" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="23dp"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <Space
            android:id="@+id/space6"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>